tweaks in <PasswordModalForm/> component: 1. fix font not showing properly 2. moved removeProjectFromFrontend call inside setTimeout, so that project can be deleted after modal closes

--- a/src/Main/FORMS/PasswordModalForm/PasswordModalForm.module.scss
+++ b/src/Main/FORMS/PasswordModalForm/PasswordModalForm.module.scss
@@ -39,7 +39,7 @@
             color: #fc7284;
             font-size: 14px;
             font-weight: 500;
-            font-family: $sa;
+            font-family: $dm;
             margin-top: 20px;
         }
     }
